--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/theme": "^3.4.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.9.0",
     "framer-motion": "^12.15.0",
     "next-themes": "^0.4.6",
